@@ -31,6 +31,7 @@ are painted much faster too.
 __docformat__ = 'restructuredtext'
 
 import warnings
+import logging
 
 from PyQt4 import QtGui
 
@@ -84,17 +85,17 @@ class Buffer(object):
 
         self.data_source = leaf
 
+        # The maximum number of rows to be read from the data source
+        self.chunk_size = 10000
+
         # The length of the dimension that is going to be read. It
         # is an int64.
-    #    self.leaf_numrows = self.data_source.nrows
         self.leaf_numrows = self.leafNumberOfRows()
-
-        # Every chunk of data read from the data source is stored in a list.
-        # The maximum length of the list (i.e. the chunk size) is 10000 rows
-        self.chunk = []
-        self.chunk_size = 10000
         if self.leaf_numrows <= self.chunk_size:
             self.chunk_size = self.leaf_numrows
+
+        # The numpy array where read data will be stored
+        self.chunk = numpy.array([])
 
         # The document row where the current chunk of data starts.
         # It must be an int64 in order to address spaces bigger than 2**32
@@ -104,15 +105,23 @@ class Buffer(object):
         # Setting the reader method at initialization time increases the
         # speed of reading several orders of magnitude
         shape = leaf.shape
-        if isinstance(leaf, tables.Table) or len(shape) > 1:
+        if isinstance(leaf, tables.Table):
             # Dataset elements will be read like a[row][column]
             self.getCell = self.arrayCell
+        elif isinstance(leaf, tables.EArray):
+            self.getCell = self.EArrayCell
+        elif isinstance(leaf, tables.VLArray):
+            # Array elements will be read like a[row]
+            self.getCell = self.vectorCell
         elif shape == ():
             # Array element will be read like a[()]
             self.getCell = self.scalarCell
-        else:
+        elif (len(shape) == 1):
             # Array elements will be read like a[row]
             self.getCell = self.vectorCell
+        elif len(shape) > 1:
+            # Dataset elements will be read like a[row][column]
+            self.getCell = self.arrayCell
 
 
     def __del__(self):
@@ -142,8 +151,12 @@ class Buffer(object):
         elif shape == ():
             # Node is a rank 0 array (e.g. numpy.array(5))
             nrows = 1
+        elif isinstance(self.data_source, tables.EArray):
+            # Warning: the number of rows of an EArray, ea, can be different
+            # from the number of rows of the numpy array ea.read()
+            nrows = self.data_source.shape[0]
         else:
-            nrows = shape[0]
+            nrows = self.data_source.nrows
 
         return numpy.array(nrows, dtype=numpy.int64)
 
@@ -185,7 +198,7 @@ class Buffer(object):
         """Find out if the dataset can be read or not.
 
         This is not a complex test. It simply try to read a small chunk
-        of data at the begining of the dataset. If it cannot then the
+        of data at the beginning of the dataset. If it cannot then the
         dataset is considered unreadable.
         """
 
@@ -214,7 +227,8 @@ class Buffer(object):
         be smaller than the requested one if the beginning/end of the
         document is reached when reading.
 
-        Data read from `VLArrays` are returned as a Python list. Any
+        Data read from `VLArrays` are returned as a Python list of objects of
+        the current flavor (usually ``numpy`` arrays). Any
         other kind of `tables.Leaf` returns a ``numpy`` array (see comments on
         restricted_flavors above)
 
@@ -227,6 +241,11 @@ class Buffer(object):
 
         start, stop = self.getReadParameters(start, buffer_size)
         try:
+            # data_source is a tables.Table or a tables.XArray
+            # but data is a numpy array
+            # Warning: in a EArray with shape (2,3,3) and extdim attribute
+            # being 1, the read method will have 3 rows. However, the numpy
+            # array returned by EArray.read() will have only 2 rows
             data = self.data_source.read(start, stop)
         except tables.HDF5ExtError:
             print(translate('Buffer', 
@@ -267,6 +286,12 @@ class Buffer(object):
         """
         Returns a cell of a 1D-array view.
 
+        VLArrays, for instance, always are read with this method. If no
+        pseudo atoms are used then a list of arrays is returned. If vlstring
+        is used then a list of raw bytes is returned. If vlunicode is used
+        then a list of unicode strings is returned. If object is used then a
+        list of Python objects is returned.
+
         The indices values are not checked (and could not be in the
         buffer) so they should be checked by the caller methods.
 
@@ -288,7 +313,37 @@ class Buffer(object):
             return self.chunk[int(row - self.start)]
         except IndexError:
             print('IndexError! buffer start: {0} row, column: {1}, {2}'.\
-                format(self.start, row, col))
+                  format(self.start, row, col))
+
+
+    def EArrayCell(self, row, col):
+        """
+        Returns a cell of a EArray view.
+
+        The indices values are not checked (and could not be in the
+        buffer) so they should be checked by the caller methods.
+
+        :Parameters:
+
+        - `row`: the row to which the cell belongs. It is a 64 bits integer
+        - `col`: the column to wich the cell belongs
+
+        :Returns: the cell at position `(row, col)` of the document
+        """
+
+        # We must shift the row value by self.start units in order to
+        # get the right chunk element. Note that indices of chunk
+        # needn't to be int64 because they are indexing a fixed size,
+        # small chunk of data (see ctor docstring).
+        # chunk = [row0, row1, row2, ..., rowN]
+        # and columns can be read from a given row using indexing notation
+        # TODO: this method should be improved as it requires to read the
+        # whola array keeping the read data in memory
+        try:
+            return self.data_source.read()[int(row - self.start)]
+        except IndexError:
+            print('IndexError! buffer start: {0} row, column: {1}, {2}'.\
+                  format(self.start, row, col))
 
 
     def arrayCell(self, row, col):
